﻿------------------------------------------------------------------------------
  TODO
------------------------------------------------------------------------------

! vx/vy in the HUD is inconsistent with how the globe actually moves! :-o

! Proper colors for bodies finally...

! Mouse wheel should zoom, not "fade" (now that I know how both (wheel & alpha) work).

! [fix-gl-ctx] "Failed to activate OpenGL context: The requested resource is in use."...
  -> Possibly unrelated: [fix-random-no-shapes], [fix-setactive-fail]
  ! Only with THREADS_ENABLED...
  ! OK, [fix-setactive-fail] isn't completely unrelated after all, because after fixing
    it (by removing Esc -> window.close() from the event loop) the error changed to:
    	"Failed to activate OpenGL context: Error 3221688541"
    which is just a generic Win32 INVALID OPERATION error... :-/
  ! Also, Esc doesn't trigger the sf::Close event, so why exactly is the Window still 
    closing after all?
  ! Also: if closing the window with its close button, the original error is
    showing yet again.

! [fix-setactive-fail] SFML window.setActive errors on termination.
  -> [fix-gl-ctx] (but doesn't seem to clearly correlate)
  ! Only with THREADS_ENABLED...
  - The one for event_loop happens quite consistently, on exit, even if the gfx thread isn't
    created at all, so no drawing happens whatsoever -- only the HUD ctor loads its font...
    -> ... and, actually, even if it doesn't (do ain'no SFML)!
  - the one for draw is nore sporadic.
  + OK, when I removed the premature window.close() from the event loop, at the
    Esc -> terminate() case, the "resource busy" error of [fix-gl-ctx] changed to:
    	"Failed to activate OpenGL context: Error 3221688541"

! [body-center-offset] Add ref. center pos. to bodies (and explicitly use it as center of mass)!
  + Or at least change it to the middle of them by default!
    -> Transformable::setOrigin?